# twoson

./: Cargo.toml  DESAIN_WORKFLOW.md  en.json  id.json
src/: clipboard.rs  main.rs  translation_data.rs
