[package]
name = "twoson"
version = "0.2.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.28.1"
tui-textarea = "0.7.0"
ansi-to-tui = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.11", features = ["derive"] }

